--- a/public/css/style.css
+++ b/public/css/style.css
@@ -133,10 +133,14 @@ table.aligncenter .col {
 }
 /* fi taules */
 
-/* links & buttons */
+/* text, links & buttons */
 .link-blue {
 	color: #4ba5e5;
 	transition: all 0.2s ease-out;
+}
+
+.text-blue {
+	color: #4ba5e5;
 }
 
 .link-blue:hover {
@@ -154,9 +158,17 @@ table.aligncenter .col {
 	text-decoration: none;
 }
 
+.text-orange {
+	color: #e69138;
+}
+
 .link-red {
 	color: #cc0000;
 	transition: all 0.2s ease-out;
+}
+
+.text-red {
+	color: #cc0000;
 }
 
 .link-red:hover {
@@ -180,6 +192,46 @@ table.aligncenter .col {
 
 .custom-btn-link {
 	padding: 5px;
+}
+
+.customAddBtn {
+	color: #fff;
+	background-color: #6aa84f;
+	border-radius: 0;
+}
+
+.customAddBtn:hover {
+	background-color: #228B22;
+	color: #fff;
+
+}
+
+.link-grey-times {
+	color: #C3C3C3;
+}
+
+.link-grey-times:hover {
+	color: #A8A8A8;
+	text-decoration: none;
+}
+
+.bg-list-grey:hover > .link-grey-times {
+	color: #939393;
+}
+
+.bg-list-grey:hover > .link-grey-times:hover {
+	color: #6F7172;
+}
+
+/* fi links & buttons */
+
+
+.bg-list-grey {
+	background-color: #F8F9FA;
+} 
+
+.bg-list-grey:hover {
+	background-color: #DFDFDF;
 }
 
 .grups {
