--- a/templates/usuari/index.html.twig
+++ b/templates/usuari/index.html.twig
@@ -14,8 +14,8 @@
 			<div class="col-12 p-0 text-right mb-4">
 				LLegenda: 
 				<span class="text-blue"><i class="fas fa-sitemap ml-3 mr-1"></i> Assignar grup</span>
-				<span class="text-blue"><i class="fas fa-wrench ml-3 mr-1"></i></i> Assignar rol</span>
-				<span class="text-blue"><i class="fas fa-trash-alt ml-3 mr-1"></i> Eliminar</span>
+				<span class="text-orange"><i class="fas fa-wrench ml-3 mr-1"></i></i> Assignar rol</span>
+				<span class="text-red"><i class="fas fa-trash-alt ml-3 mr-1"></i> Eliminar</span>
 
 			</div>
 			<table class="table w-100 custom-table" id="llistatUsuaris">
