Little change colors

--- a/templates/baseJoc.html.twig
+++ b/templates/baseJoc.html.twig
@@ -25,6 +25,7 @@
         <ul class="list-group alltransitionparent3">
             <li><a class="list-group-item" href="#">Partida</a></li>
             <li><a class="list-group-item" href="#">Entrenament</a></li>
+            <li><a class="list-group-item" href="#">Rànking</a></li>
             <li><a class="list-group-item" href="#">Configuració</a></li>
             <li><a id="sortirElement" class="list-group-item" href="#">Sortir</a></li>
         </ul>
