creació d'usuaris funcional des de la vista afegir usuari

--- a/templates/usuari/index.html.twig
+++ b/templates/usuari/index.html.twig
@@ -5,11 +5,11 @@
 {% block body %}
 	<div class="card border-0 m-5">
 		<div class="card-header border-bottom bg-white d-flex justify-content-between p-0">
-			<h1 class="h3">USUARIS</h1><a class="btn btn-link" href="#"><i class="fas fa-arrow-left"></i> TORNAR</a>
+			<h1 class="h3">USUARIS</h1><a class="btn btn-link link-blue" href="#"><i class="fas fa-arrow-left"></i> TORNAR</a>
 		</div>
 		<div class="card-body">
 			<div class="col-12 p-0 text-right mb-4">
-				<a href="#" class="btn customAddBtn"><i class="fas fa-plus"></i> Afegir alumne</a>
+				<a href="{{ path('afegirUsuari') }}" class="btn customAddBtn"><i class="fas fa-plus"></i> Afegir usuari</a>
 			</div>
 			<div class="col-12 p-0 text-right mb-4">
 				LLegenda: 
