l'usuari s'activa automaticament al generar-se

--- a/templates/usuari/afegirUsuari.html.twig
+++ b/templates/usuari/afegirUsuari.html.twig
@@ -13,13 +13,13 @@
 
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="#" class="link-blue">Usuaris</a></li>
+				<li class="breadcrumb-item"><a href="{{ path('usuaris') }}" class="link-blue">Usuaris</a></li>
 				<li class="breadcrumb-item active" aria-current="page">Nou usuari</li>
 			</ol>
 		</nav>
 		
 		<div class="card-header border-bottom bg-white d-flex justify-content-between p-0 mt-4">
-			<h1 class="h3">NOU USUARI</h1><a class="btn btn-link link-blue" href="#"><i class="fas fa-arrow-left"></i> TORNAR</a>
+			<h1 class="h3">NOU USUARI</h1><a class="btn btn-link link-blue" href="javascript:history.back()"><i class="fas fa-arrow-left"></i> TORNAR</a>
 		</div>
 		<div class="card-body">
 			<form action="" method="post">
