--- a/templates/usuari/index.html.twig
+++ b/templates/usuari/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 	<div class="card border-0 m-5">
 		<div class="card-header border-bottom bg-white d-flex justify-content-between p-0">
-			<h1 class="h3">USUARIS</h1><a class="btn btn-link link-blue" href="#"><i class="fas fa-arrow-left"></i> TORNAR</a>
+			<h1 class="h3">USUARIS</h1><a class="btn btn-link link-blue" href="javascript:history.back()"><i class="fas fa-arrow-left"></i> TORNAR</a>
 		</div>
 		<div class="card-body">
 			<div class="col-12 p-0 text-right mb-4">
