--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,7 +32,7 @@
             {# barra lateral #}
             <div id="menuLateral">
                 <ul id="menuList">
-                    <li><a href="#"><i class="fas fa-home mr-2"></i>INICI</a></li>
+                    <li class="{% if app.request.attributes.get('_route') == 'inici' %}active{% endif %}"><a href="{{ path('inici') }}"><i class="fas fa-home mr-2"></i>INICI</a></li>
                     <li class="{% if app.request.attributes.get('_route') == 'grups' or app.request.attributes.get('_route') == 'alumnesGrup' %}active{% endif %}"><a href="{{ path('grups') }}"><i class="fas fa-sitemap mr-2"></i>GRUPS</a></li>
                     <li class="{% if app.request.attributes.get('_route') == 'usuaris' %}active{% endif %}"><a href="{{ path('usuaris') }}"><i class="fas fa-users mr-2"></i>USUARIS</a></li>
                     <li><a href="#"><i class="fas fa-trophy mr-2"></i>PARTIDES</a></li>
