--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,6 +61,10 @@ html, body {
 	padding: 20px 0px 20px 50px;
 }
 
+#menuList > li:hover {
+	background-color: #E0E0E0;
+}
+
 #menuList > li.active {
 	background-color: #fff;
 	position: relative;
