--- a/templates/baseJoc.html.twig
+++ b/templates/baseJoc.html.twig
@@ -22,7 +22,7 @@
 
         <h1 class="p-3">Trivial</h1>
 
-        <ul class="list-group alltransitionparent3">
+        <ul id="startMenuUl" class="list-group alltransitionparent3">
             <li><a id="partidaBtn" class="buttonStart list-group-item" href="#">Partida</a></li>
             <li><a id="entrenamentBtn" class="buttonStart list-group-item" href="#">Entrenament</a></li>
             <li><a id="rankingBtn" class="buttonStart list-group-item" href="#">Rànquing</a></li>
