--- a/public/css/style.css
+++ b/public/css/style.css
@@ -360,6 +360,8 @@ table.aligncenter .col {
 #contingutStart {
 	width: calc(100% - 350px);
 	background-color: rgba(41,41,41,1);
+	overflow: auto;
+	height: 100%;
 }
 
 #contingutStart .container {
@@ -369,6 +371,8 @@ table.aligncenter .col {
 
 #contingutStart h2 {
 	color: white;
+	font-weight: bold;
+	text-transform: uppercase;
 }
 
 .list-group {
@@ -394,7 +398,7 @@ table.aligncenter .col {
 }
 
 #verticalCardsContainer {
-	margin-top: 20px!important;
+	margin-top: 15px!important;
 }
 
 #multiHighlight {
@@ -411,6 +415,8 @@ table.aligncenter .col {
 	height: 450px;
 	width: 100%;
 	background-color: rgba(255,255,255,0.1);
+
+	text-decoration: none;
 }
 
 #playMultiplayerCard img {
@@ -437,6 +443,10 @@ table.aligncenter .col {
 	z-index: 90;
 }
 
+#playMultiplayerCard a:hover p {
+	text-decoration: none!important;
+}
+
 #playMultiplayerCard, #cardRanking {
 	display: block;
 }
@@ -444,60 +454,131 @@ table.aligncenter .col {
 #cardRanking {
 	background-color: rgba(255,255,255,0.1);
 	color: white;
-	border-radius: 5px;
 }
 
 #rankingJugadors {
 	width: 100%;
 	color: white;
 	box-sizing: border-box;
+
+	min-height: 250px;
 }
 
 #rankingJugadors th, #rankingJugadors td {
 	padding: 10px;
 }
 
+#rankingJugadors_wrapper .col-sm-12 {
+	padding-left: 0px!important;
+	padding-right: 0px!important;
+}
+
+#rankingJugadors thead {
+	background-color: rgba(41,41,41,0.4);
+}
+
 #rankingJugadors tr:nth-child(1) {
 	border-bottom: 1px solid white;
 }
 
-#rankingJugadors th:nth-child(2), #rankingJugadors td:nth-child(2) {
+input[type=text],
+input[type=password] {
+    box-sizing : border-box;
+}
+
+/* BACKGROUND ROTATE */
+
+.backgroundRotate {
+	position: absolute;
+	right: 0;
+	transform: translate(50%, 50%);
+	display: table;
+
+	min-height: 400px;
+}
+
+.backgroundRotate img {
+	transform-origin: center middle;
+	animation: rotate360 50s infinite;
+	animation-timing-function: linear;
+}
+
+/* BACKGROUND ROTATE END */
+
+/* TEMP */
+
+#rankingJugadors_filter, #rankingJugadors_info {
+	display: none;
+}
+
+
+/* TEMP END */
+
+div.dataTables_wrapper div.dataTables_filter label {
+	width: 100%;
+}
+
+div.dataTables_wrapper div.dataTables_filter input {
+	width: auto;
+	box-sizing: border-box;
+}
+
+#rankingJugadors th:nth-child(3), #rankingJugadors td:nth-child(3) {
 	text-align: center;
 	border-left: 1px dotted white;
+	width: 25%;
 }
 
 #rankingJugadors th:nth-child(1), #rankingJugadors th:nth-child(1) {
+	text-align: center;
+	border-right: 1px dotted white;
+	width: 10%;
+}
+
+#rankingJugadors th:nth-child(2), #rankingJugadors th:nth-child(2) {
 	width: 70%;
 }
 
-#rankingJugadors td:nth-child(2), #rankingJugadors td:nth-child(2) {
-	width: 30%;
-}
 
 .verticalCard {
 	display: block;
 	box-sizing: border-box;
 	padding-left: 0px;
+
+	min-width: 250px!important;
 }
 
 .verticalCard a {
 	position: relative;
-	display: block;
+	display: table;
+	background-color: rgba(255,255,255,0.2);
+
+	height: 300px;
+	text-decoration: none;
 }
 
 .verticalCard img {
-	height: 300px;
 	width: 100%;
-	background-color: rgba(255,255,255,0.2);
+	position: absolute;
+
+	z-index: 85;
 }
 
 .verticalCard p {
-	position: absolute;
 	top: 0;
 	color: white;
-	font-size: 26px;
+	font-size: 23px;
 	box-sizing: border-box;
-	display: block;
+
+	padding: 10px;
+	text-transform: uppercase;
+
+	display: table-cell;
+	vertical-align: middle;
+
+	z-index: 90;
+	width: 100%;
+	text-align: center;
 }
 
 /* PREPARAR PARTIDA INTRO END */
@@ -519,3 +600,16 @@ table.aligncenter .col {
 }
 
 /* TRANSICIONS END */
+
+/* ANIMATIONS */
+
+@keyframes rotate360 {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+/* ANIMATIONS END */
