--- a/templates/pregunta/index.html.twig
+++ b/templates/pregunta/index.html.twig
@@ -43,14 +43,39 @@
 							<td>{{ pregunta.idDificultat.nom }}</td>
 							<td>{{ pregunta.tipus.nom }}</td>
 							<td>
-								<button class="btn btn-link link-blue custom-btn-link assignarGrupBtn" data-id="{{ pregunta.id }}"><i class="far fa-eye"></i></button>
-								<button class="btn btn-link link-orange custom-btn-link assignarRolBtn" data-id="{{ pregunta.id }}"><i class="far fa-check-square"></i></button>
-								<button class="btn btn-link link-red custom-btn-link eliminarUsuariBtn" data-id="{{ pregunta.id }}"><i class="fas fa-trash-alt"></i></button>
+								<button class="btn btn-link link-blue custom-btn-link detallsPregunta" data-id="{{ pregunta.id }}"><i class="far fa-eye"></i></button>
+								<button class="btn btn-link link-orange custom-btn-link canviarEstatPregunta" data-id="{{ pregunta.id }}">
+									{% if pregunta.activa == 1 %}
+										<i class="far fa-check-square"></i>		
+									{% else %}
+										<i class="far fa-square"></i>
+									{% endif %}
+								</button>
+								<button class="btn btn-link link-red custom-btn-link eliminarPregunta" data-id="{{ pregunta.id }}"><i class="fas fa-trash-alt"></i></button>
 							</td>
 						</tr>
 					{% endfor %}
 				</tbody>
 			</table>
+		</div>
+	</div>
+
+	<div id="eliminarPreguntaModal" class="modal fade" tabindex="-1" role="dialog" data-backdrop="static">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h6 class="modal-title" id="eliminarPreguntaModalTitol"></h6>
+					<button type="button" class="close cancelEliminarPreguntaBtn" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<div id="eliminarPreguntaModalMsg">
+					</div>
+				</div>
+				<div class="modal-footer" id="eliminarPreguntaModalBtns">
+				</div>
+			</div>
 		</div>
 	</div>
 
@@ -76,6 +101,61 @@
                 ],
                 "order": [[0, "asc"]]
 	        });
+
+		    $('body').on( 'click', '.canviarEstatPregunta', function() {
+		    	$('.alert').alert('close');
+		    	var idPregunta = $(this).data('id');
+		    	var url = `{{ path('canviarEstatPregunta') }}`;
+		    	var btn = $(this);
+		    	$.post(url, { 'idPregunta': idPregunta }) 
+		    		.done(function(response) {
+		    			if (response.estat == 1) {
+		    				btn.html('<i class="far fa-check-square"></i>');
+		    			} else {
+		    				btn.html('<i class="far fa-square"></i>');
+		    			}
+		    		})
+					.fail(errorCanviEstatPregunta);
+		    });
+
+		    function errorCanviEstatPregunta(xhr) {
+		    	var alerta = `<div class="alert alert-danger col-12">L'estat de la pregunta no ha pogut ser canviat degut a un error.<br>${xhr.status }: ${xhr.statusText}</div>`;
+		    	$('.card').prepend(alerta);
+			}
+
+			$('body').on( 'click', '.eliminarPregunta', function() {
+		    	var id = $(this).data('id');
+		    	$('#eliminarPreguntaModalTitol').html(`Eliminar pregunta <strong>${id}</strong>`);
+		    	$('#eliminarPreguntaModalMsg').html(`<div class="text-center"><i class="fas fa-user-times mb-2" style="color: red; font-size: 40px"></i><div><strong>Atenció!</strong> Estàs segur que vols eliminar aquesta pregunta?<div class="alert alert-warning mt-2" style="font-size:11px;">Es perdrà tota la informació relacionada amb aquesta pregunta.</div></div></div>`);
+		    	$('#eliminarPreguntaModalBtns').html(`<button class="cancelEliminarPreguntaBtn btn btn-secondary mr-2">Cancel·lar</button><button data-id="${id}" id="preguntaEliminadaBtn" class="btn btn-primary">Continuar</button>`);
+		    	$('#eliminarPreguntaModal').modal('show');
+		    });
+
+		    $('body').on('click', '#preguntaEliminadaBtn', function(e) {
+		    	var id = $(this).data('id');
+		    	var url = `{{ path('eliminarPreguntaAjax') }}`;
+		    	$.post(url, { 'idPregunta': id }) 
+		    		.done(function(response) {
+						$('#eliminarPreguntaModalMsg').html(`<div class="text-center"><i class="fas fa-user-slash mb-2" style="color: green; font-size: 40px"></i><div>La pregunta s'ha eliminat correctament.</div></div>`);
+		    			$('#eliminarPreguntaModalBtns').html(`<button class="reloadBtn btn btn-primary mr-2">Acceptar</button>`);
+					})
+					.fail(errorEliminacioPregunta);
+		    	e.preventDefault();
+		    });
+
+		    $('body').on('click', '.cancelEliminarPreguntaBtn', function()  {
+		    	$('#eliminarPreguntaModal').modal('hide');
+		    });
+
+		    function errorEliminacioPregunta() {
+		    	$('#eliminarPreguntaModalMsg').html(`<div class="text-center"><i class="fas fa-exclamation-triangle mb-2" style="color: red; font-size: 40px"></i><div>Error! No ha sigut possible eliminar la pregunta.</div></div>`);
+		    	$('#eliminarPreguntaModalBtns').html(`<button class="reloadBtn btn btn-primary mr-2">Acceptar</button>`);
+		    }
+
+		    $('body').on('click', '.reloadBtn', function() {
+		    	var reload = `{{ path('usuaris') }}`;
+		    	window.location.replace(reload);
+		    });
 		});
 	</script>
 {% endblock %}
