--- a/public/css/style.css
+++ b/public/css/style.css
@@ -461,6 +461,10 @@ table.aligncenter .col {
 	color: white;
 }
 
+#cardRanking {
+	padding: 20px!important;
+}
+
 #rankingJugadors {
 	width: 100%;
 	color: white;
@@ -549,8 +553,7 @@ div.dataTables_wrapper div.dataTables_filter input {
 	display: block;
 	box-sizing: border-box;
 	padding-left: 0px;
-
-	min-width: 250px!important;
+	padding-right: 0px!important;
 }
 
 #vertical1 a {
@@ -571,6 +574,10 @@ div.dataTables_wrapper div.dataTables_filter input {
 
 .verticalCardDesc {
 	background-color: rgba(0,0,0,0.5);
+}
+
+.verticalCard:hover .verticalCardDesc {
+	opacity: 0;
 }
 
 .verticalCard a {
@@ -612,6 +619,49 @@ div.dataTables_wrapper div.dataTables_filter input {
 }
 
 /* PREPARAR PARTIDA INTRO END */
+
+/* PARTIDA LOBBY */
+
+#tipusPartidaSlider, .carousel-inner, .carousel-inner * {
+	max-height: 350px;
+}
+
+#playerList {
+	color: white;
+}
+
+#playerList ul {
+	list-style: none;
+	width: 100%;
+	padding: 0px;
+}
+
+#playerList ul li a {
+	width: 100%;
+	border-bottom: 1px solid white;
+	display: block;
+	color: inherit;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 22px;
+
+	text-shadow: 1px 1px 10px rgba(0,0,0,0.4);
+	padding: 5px;
+}
+
+#playerList ul li a:hover {
+	background-color: rgba(255,255,255,0.1);
+}
+
+#playerList ul li:nth-child(2) a {
+	border-top: 1px solid white;
+}
+
+#playerListHead {
+	padding-bottom: 10px;
+}
+
+/* PARTIDA LOBBY END */
 
 /* TRANSICIONS */
 
