--- a/public/css/style.css
+++ b/public/css/style.css
@@ -438,6 +438,7 @@ table.aligncenter .col {
 
 /*Eddy LOGIN*/
 .fondo-eddy{
-	background-image: url("./public/img/books.jpg");
+	background-image: url("../img/books.jpg");
 }
+
 /*FIN Eddy LOGIN*/
