--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -11,27 +11,37 @@
     {% if csrf_token %}
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
     {% endif %}
-<div class="row">
-			<div class="col-lg-12">
+
+<div class="row eddy">
+
+	<div class="col-lg-12">
     <label for="username">{{ 'security.login.username'|trans }}</label>
     </div>
+    
     <div class="col-lg-12">
     <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
-</div>
     </div>
+
     <div class="col-lg-12">
     <label for="password">{{ 'security.login.password'|trans }}</label>
-</div>
+    </div>
+
     <div class="col-lg-12">
     <input type="password" id="password" name="_password" required="required" autocomplete="current-password" />
     </div>
+
+    <div class="col-lg-12">
     <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
     <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
-
-    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
-</form>
     </div>
-       
-            </div>
-            </div>
-            </div>
+
+     <div class="col-lg-12">
+    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+    </div>
+</div>
+</form>
+            
+        </div>
+    </div>
+</div>
+</div>
