--- a/templates/usuari/afegirUsuari.html.twig
+++ b/templates/usuari/afegirUsuari.html.twig
@@ -13,8 +13,8 @@
 
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="{{ path('usuaris') }}" class="link-blue">Usuaris</a></li>
-				<li class="breadcrumb-item active" aria-current="page">Nou usuari</li>
+				<li class="breadcrumb-item"><a href="{{ path('usuaris') }}" class="link-blue"><i class="fas fa-users mr-2"></i>Usuaris</a></li>
+				<li class="breadcrumb-item active" aria-current="page">Afegir usuari</li>
 			</ol>
 		</nav>
 		
@@ -70,7 +70,7 @@
 				</div>
 				
 				<div class="col-8 text-center">
-					<button type="submit" class="btn customAddBtn mt-3">Afegir usuari</button>
+					<button type="submit" class="btn customAddBtn mt-3"><i class="fas fa-plus mr-2"></i>Afegir usuari</button>
 				</div>
 			</form>
 		</div>
