--- a/templates/usuari/index.html.twig
+++ b/templates/usuari/index.html.twig
@@ -9,7 +9,7 @@
 		</div>
 		<div class="card-body">
 			<div class="col-12 p-0 text-right mb-4">
-				<a href="{{ path('afegirUsuari') }}" class="btn customAddBtn"><i class="fas fa-plus"></i> Afegir usuari</a>
+				<a href="{{ path('afegirUsuari') }}" class="btn customAddBtn"><i class="fas fa-plus mr-2"></i>Afegir usuari</a>
 			</div>
 			<div class="col-12 p-0 text-right mb-4">
 				LLegenda: 
