--- a/templates/pregunta/index.html.twig
+++ b/templates/pregunta/index.html.twig
@@ -10,7 +10,7 @@
 		</div>
 		<div class="card-body">
 			<div class="col-12 p-0 text-right mb-4">
-				<a href="" class="btn customAddBtn"><i class="fas fa-plus"></i> Afegir pregunta</a>
+				<a href="{{ path('afegirPregunta') }}" class="btn customAddBtn"><i class="fas fa-plus mr-2"></i>Afegir pregunta</a>
 			</div>
 			<div class="col-12 p-0 text-right mb-4">
 				LLegenda: 
