--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -3,16 +3,15 @@
 {% if error %}
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
-<div class="fondo-eddy"> 
+<div> 
 <div class="container-fluid d-flex justify-content-center">
-		<div class="row">
-			<div class="col-lg-12 border">
-<form action="{{ path("fos_user_security_check") }}" method="post">
+
+<form action="{{ path("fos_user_security_check") }}" method="post" class="d-flex justify-content-center formulario-login">
     {% if csrf_token %}
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
     {% endif %}
 
-<div class="row eddy">
+<div class="row">
 
 	<div class="col-lg-12">
     <label for="username">{{ 'security.login.username'|trans }}</label>
@@ -30,12 +29,12 @@
     <input type="password" id="password" name="_password" required="required" autocomplete="current-password" />
     </div>
 
-    <div class="col-lg-12">
+    <div class="col-lg-12" id="rememberDiv">
     <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
-    </div>
+    <label class="remember" for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+    
 
-     <div class="col-lg-12">
+     
     <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
     </div>
 </div>
