--- a/public/css/style.css
+++ b/public/css/style.css
@@ -447,12 +447,16 @@ table.aligncenter .col {
 	width: 80%;
 	max-width: 500px;
 	margin-top: 200px;
-	border: #AE0505 10px solid;
+	border: blue 1px solid;
 	padding: 10px;
 }
 
 .formulario-login input, .formulario-login label, .formulario-login textarea {
 	width: 100%;
+}
+
+.label_p{
+	padding-top:20px;
 }
 
 #rememberDiv {
