--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -14,7 +14,7 @@
 <div class="row">
 
 	<div class="col-lg-12">
-    <label for="username">{{ 'security.login.username'|trans }}</label>
+    <label class="label_p" for="username">{{ 'security.login.username'|trans }}</label>
     </div>
     
     <div class="col-lg-12">
@@ -22,7 +22,7 @@
     </div>
 
     <div class="col-lg-12">
-    <label for="password">{{ 'security.login.password'|trans }}</label>
+    <label class="label_p" for="password">{{ 'security.login.password'|trans }}</label>
     </div>
 
     <div class="col-lg-12">
